chore: RuleVariableValue as record